<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8DAEF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title1"
        android:layout_width="412dp"
        android:layout_height="50dp"
        android:background="#BB8FCE"
        android:text="ComponentesBasicos"
        android:textColor="#5E35B1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="299dp"
        android:layout_height="36dp"
        android:text="@string/componentes_basicos"
        android:textColor="#000"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/plain1"
        android:layout_width="297dp"
        android:layout_height="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/titleRadio"
        android:layout_width="299dp"
        android:layout_height="36dp"
        android:text="Radio Button"
        android:textColor="#000"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"
        tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CheckBox 2"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title1"
        app:layout_constraintVertical_bias="0.452"
        tools:ignore="HardcodedText,MissingConstraints,TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_1"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/titleCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348"
        tools:ignore="TextSizeCheck" />

    <ToggleButton
        android:id="@+id/botonToggle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textOff="@string/activo"
        android:textOn="@string/inactivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/titleToogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tooglebutton_on"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="TextSizeCheck" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:text="switch"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title1"
        app:layout_constraintVertical_bias="0.723"
        tools:ignore="HardcodedText,TextSizeCheck,TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/titleSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_off"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textOption"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:background="#E5E8E8 "
        android:text="@string/option"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/titleImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/botonImagen"
        android:layout_width="48dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title1"
        app:layout_constraintVertical_bias="0.858"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/titleBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textColor="#000"
        android:textSize="25sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="646dp" />

    <Button
        android:id="@+id/botonEnviar"
        android:layout_width="40mm"
        android:layout_height="wrap_content"
        android:text="@string/presioname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title1"
        app:layout_constraintVertical_bias="0.995"
        tools:ignore="InOrMmUsage" />

    <RadioGroup
        android:layout_width="131dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/opcion_1"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opcion_2"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>